WIP: Further steps to an installable package.
4 tests are still not running - a URL defined in "topobank"
cannot be resolved yet.

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules
 
 [metadata]
 name = topobank-statistics
-version = 0.92.0
+version = 0.92.0-alpha.1
 description =
     This is a plugin for "topobank" for statistical analysis of measurements and digital surface twins.
 long_description = file: README.rst
