--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,7 @@
 include LICENSE
 include README.rst
-recursive-include topobank/static *
-recursive-include topobank/templates *
+recursive-include topobank_statistics/static *
+recursive-include topobank_statistics/templates *
 # recursive-include docs *
 global-exclude __pycache__
 global-exclude *.py[co]
