--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,13 @@ python:
 install:
   - sudo apt-get install libfftw3-dev libopenblas-dev
   - pushd /tmp
-  - git clone git@github.com:ContactEngineering/TopoBank.git
-  - cd topobank
+  - git clone https://github.com/ContactEngineering/TopoBank.git
+  # - git clone git@github.com:ContactEngineering/TopoBank.git
+  - cd TopoBank
   - git checkout 22_analysis_plugins
   - pip install -q -r requirements/local.txt --no-binary numpy
   - pip install -e .[dev]
-  - python manage.py collectstatic
+  - USE_DOCKER=no python manage.py collectstatic
   - popd
   - pip install -e .[dev] --no-binary numpy
 script:
