ENH: Also export SI units (#4)

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ include_package_data = true
 packages = find:
 python_requires = >=3.8
 install_requires =
+    pint
 
 [options.extras_require]
 dev =
