MAINT: Use setuptools_scm to automatically discover the version

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,10 +8,9 @@ exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules
 
 [metadata]
 name = topobank-statistics
-version = 0.92.1
 description =
     This is a plugin for "topobank" for statistical analysis of measurements and digital surface twins.
-long_description = file: README.rst
+long_description = file: README
 url = https://contact.engineering
 author = contact.engineering
 author_email = support@contact.engineering
