--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   tests:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     timeout-minutes: 15
 
     services:
@@ -23,14 +23,24 @@ jobs:
       USE_DOCKER: no
       DJANGO_SETTINGS_MODULE: config.settings.test
 
+    strategy:
+      matrix:
+        python-version: ['3.10']
+
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
         submodules: recursive
 
+    - name: Set up python3 ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+
     - name: Install
       run: |
+        pip install --upgrade pip
         pushd /tmp
         git clone https://github.com/ContactEngineering/topobank.git
         cd topobank
