--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         image: postgres
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: secret
           POSTGRES_DB: topobank-test
         ports:
           - 5432:5432
@@ -28,7 +28,7 @@ jobs:
     env:
       USE_DOCKER: no
       DJANGO_SETTINGS_MODULE: config.settings.test
-      DATABASE_URL: postgres://localhost
+      DATABASE_URL: postgres://postgres:secret@localhost/topobank-test
 
     strategy:
       matrix:
