--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,30 @@ build-backend = 'setuptools.build_meta:__legacy__'
 
 [project]
 name = 'topobank-statistics'
+description = 'This is a plugin for "topobank" for statistical analysis of measurements and digital surface twins.'
 dynamic = ['version']
+readme = 'README'
+license = { file = 'LICENSE' }
+authors = [
+    { name = "Michael Röttger", email = "info@michael-roettger.de" },
+    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" }
+]
+classifiers = [
+    'Development Status :: 5 - Production/Stable',
+    'Environment :: Web Environment',
+    'Framework :: Django',
+    'Framework :: Django :: 3.2',
+    'Framework :: Celery',
+    'Intended Audience :: Developers',
+    'License :: OSI Approved :: MIT License',
+    'Operating System :: POSIX',
+    'Programming Language :: Python',
+    'Programming Language :: Python :: 3',
+    'Programming Language :: Python :: 3 :: Only',
+    'Programming Language :: Python :: 3.8',
+    'Programming Language :: Python :: 3.9',
+    'Topic :: Internet :: WWW/HTTP',
+    'Topic :: Internet :: WWW/HTTP :: Dynamic Content'
+]
 
 [tool.setuptools_scm]
