--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = 'setuptools.build_meta:__legacy__'
 [project]
 name = 'topobank-statistics'
 description = 'This is a plugin for "topobank" for statistical analysis of measurements and digital surface twins.'
+requires-python = ">=3.8.0"
 dynamic = ['version']
 readme = 'README'
 license = { file = 'LICENSE' }
@@ -29,5 +30,9 @@ classifiers = [
     'Topic :: Internet :: WWW/HTTP',
     'Topic :: Internet :: WWW/HTTP :: Dynamic Content'
 ]
+
+[project.urls]
+homepage = 'https://contact.engineering'
+repository = 'https://github.com/ContactEngineering/topobank-statistics'
 
 [tool.setuptools_scm]
