--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = 'setuptools.build_meta:__legacy__'
 [project]
 name = 'topobank-statistics'
 description = 'This is a plugin for "topobank" for statistical analysis of measurements and digital surface twins.'
-requires-python = ">=3.8.0"
+requires-python = '>=3.8.0'
 dynamic = ['version']
 readme = 'README'
 license = { file = 'LICENSE' }
