--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,12 +47,12 @@ jobs:
 
     - name: Install
       run: |
-        pip install --upgrade pip
+        pip install --upgrade pip pip-tools
+        pip-compile --extra dev pyproject.toml topobank/pyproject.toml
+        pip install -r requirements.txt
         pushd /tmp
         git clone --branch develop https://github.com/ContactEngineering/topobank.git
         cd topobank
-        pip install -q -r requirements/local.txt
-        pip install -e .[dev]
         USE_DOCKER=no python manage.py collectstatic
         popd
         pip install -e .[dev]
