MAINT: Minor text changes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,4 +35,7 @@ classifiers = [
 homepage = 'https://contact.engineering'
 repository = 'https://github.com/ContactEngineering/topobank-statistics'
 
+[tool.setuptools]
+py-modules = ['topobank_statistics']
+
 [tool.setuptools_scm]
