--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = 'setuptools.build_meta:__legacy__'
 name = 'topobank-statistics'
 description = 'This is a plugin for "topobank" for statistical analysis of measurements and digital surface twins.'
 requires-python = '>=3.8.0'
-dynamic = ['version']
+dynamic = ['dependencies', 'entry-points', 'optional-dependencies', 'version']
 readme = 'README.rst'
 license = { file = 'LICENSE' }
 authors = [
