WIP: Sorted imports and reorganized more HTML-related code to the UI module; modified handling of entry points, including context processors; Django starts again

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,5 +20,5 @@ dev =
 
 [options.entry_points]
 topobank.plugins =
-    topobank_statistics = topobank_statistics:TopobankPluginMeta
+    topobank_statistics = topobank_statistics.apps.StatisticsPluginConfig
 
