--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,7 @@ name = topobank-statistics
 include_package_data = true
 packages = find:
 install_requires =
+    SurfaceTopography>=1.13.4
     pint
 
 [options.extras_require]
