--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [build-system]
-requires = ['setuptools>=40.8.0', 'setuptools_scm[toml]>=6.2', 'wheel']
-build-backend = 'setuptools.build_meta:__legacy__'
+requires = ["flit_core>=3.2"]
+build-backend = "flit_core.buildapi"
 
 [project]
 name = 'topobank-statistics'
 description = 'This is a plugin for "topobank" for statistical analysis of measurements and digital surface twins.'
 requires-python = '>=3.8.0'
-dynamic = ['dependencies', 'entry-points', 'optional-dependencies', 'version']
+dynamic = ['version']
 readme = 'README.rst'
 license = { file = 'LICENSE' }
 authors = [
@@ -30,12 +30,15 @@ classifiers = [
     'Topic :: Internet :: WWW/HTTP',
     'Topic :: Internet :: WWW/HTTP :: Dynamic Content'
 ]
+dependencies = [
+    #'topobank',
+    'SurfaceTopography>=1.13.4',
+    'pint'
+]
 
 [project.urls]
 homepage = 'https://contact.engineering'
 repository = 'https://github.com/ContactEngineering/topobank-statistics'
 
-[tool.setuptools]
-py-modules = ['topobank_statistics']
-
-[tool.setuptools_scm]
+[project.entry-points.'topobank.plugins']
+topobank_statistics = 'topobank_statistics.apps.StatisticsPluginConfig'
