--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["flit_core>=3.2"]
+requires = ["flit_core>=3.2", "DiscoverVersion"]
 build-backend = "flit_core.buildapi"
 
 [project]
@@ -31,6 +31,7 @@ classifiers = [
     'Topic :: Internet :: WWW/HTTP :: Dynamic Content'
 ]
 dependencies = [
+    'DiscoverVersion',
     #'topobank',
     'SurfaceTopography>=1.13.4',
     'pint'
